Fix bg particle overlapping tabs

--- a/src/app/login-page-components/background-particles/background-particles.component.scss
+++ b/src/app/login-page-components/background-particles/background-particles.component.scss
@@ -1,4 +1,4 @@
-#tsparticles {
+::ng-deep #tsparticles {
     position: fixed;
     z-index: -100;
 }
